packages/typ/tests/fixtures/diagnostics/0197_adt_constructor_int_arg_mismatch_07.ml.infer.expected
File "0197_adt_constructor_int_arg_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0197_adt_constructor_int_arg_mismatch_07 is not a valid module name.

File "0197_adt_constructor_int_arg_mismatch_07.ml", line 2, characters 13-17:
2 | let _ = Open true
                 ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
