packages/typ/tests/fixtures/diagnostics/0197_adt_constructor_int_arg_mismatch_07.ml
type rec_eta = Open of int | Closed of bool
let _ = Open true
